<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    tools:context="ac.bbt.sp2014f_groupc.RSIActivity">

    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello_world" />
    
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content" 
	    android:layout_gravity="left"
	    android:layout_marginTop="10dp">
	
		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15sp"
	        android:text="@string/button1" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="25sp"
			android:id="@+id/alert3"
			android:text="@string/hint_name"/>
		
	</LinearLayout>
	
	<!-- 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/line_l" />
     -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/RSI_a" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/line_l" />    
        
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
	   	<LinearLayout
	   	    android:orientation="vertical"
	   	    android:layout_width="match_parent"
		    android:layout_height="wrap_content">    
        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:text="@string/line_s" />      
		 	
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginLeft="15dp">
			    
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="15sp"
			        android:text="@string/bori_b" />
			 	
				
			 	<Spinner
				    android:layout_height="wrap_content"
				    android:layout_width="wrap_content"
				    android:layout_marginLeft="15dp"
				    android:entries="@array/RSI_day"
				    android:id="@+id/RSI_day" />
			 	
			</LinearLayout>	 	
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:text="@string/line_s" />  
		        
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginLeft="15dp">
			 	
				<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="15sp"
			        android:text="@string/bori_d" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				    android:layout_marginLeft="15dp"  
					android:textSize="15sp"
					android:text="@string/RSI_e" />
			 	<Spinner
				    android:layout_height="wrap_content"
				    android:layout_width="wrap_content"
				    android:layout_marginLeft="15dp"  
				    android:entries="@array/RSI_list"
				    android:id="@+id/RSI_list" /> 	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dp" 
					android:textSize="15sp"
					android:text="@string/bori_f" />	
					
			</LinearLayout>	
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:text="@string/line_s" />  	
				
			<LinearLayout
			    android:orientation="horizontal" 
			    android:layout_height="wrap_content" 
			    android:layout_width="wrap_content" 
			    android:layout_gravity="center_horizontal" 
			    android:layout_marginTop="10dp">
				<Button 
				    android:layout_height="wrap_content" 
				    android:layout_width="120dp" 
				    android:text="@string/bt_can" 
				    android:id="@+id/bt_can3"/>
				<Button 
				    android:layout_height="wrap_content" 
				    android:layout_width="120dp" 
				    android:text="@string/bt_set2" 
				    android:id="@+id/bt_set3"/>     
			        
		        
		    </LinearLayout>
		    
	
			
		</LinearLayout>
	</ScrollView>      

</LinearLayout>