<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello_world" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world2" />
	 
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
	   	<LinearLayout
	   	    android:orientation="vertical"
	   	    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
        
        
		    <RelativeLayout
		    	android:orientation="horizontal"
		    	android:layout_height="wrap_content"
		    	android:layout_width="match_parent">
			 	<Button 
			        android:layout_height="wrap_content" 
			        android:layout_width="wrap_content" 
			        android:text="@string/button1"
			        android:id="@+id/btn_1"/>
			        
		
			 	<Switch
			 	    android:id="@+id/switch1"
			 	    android:layout_width="wrap_content"
			 	    android:layout_height="wrap_content"
			 	    android:layout_alignParentRight="true"
			 	    android:layout_centerVertical="true"
			 	    android:textOff="OFF"
			 	    android:textOn="ON" />
		
			</RelativeLayout>
		
		 	
		    <RelativeLayout
		    	android:orientation="horizontal"
		    	android:layout_height="wrap_content"
		    	android:layout_width="match_parent">
		 		<Button 
		        	android:layout_height="wrap_content" 
		       		android:layout_width="wrap_content" 
		        	android:text="@string/button2"
		        	android:id="@+id/btn_2"/>
		 		<Switch
		 		    android:id="@+id/switch2"
		 		    android:layout_width="wrap_content"
		 		    android:layout_height="wrap_content"
		 		    android:layout_alignParentRight="true"
		 		    android:layout_centerVertical="true"
		 		    android:textOff="OFF"
		 		    android:textOn="ON" />
		
			</RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/button3"
		        	android:id="@+id/btn_3"/>
		        <Switch
		            android:id="@+id/switch3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:textOff="OFF"
		            android:textOn="ON" />
		    </RelativeLayout>
		        	
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/button4" 
		        	android:id="@+id/btn_4"/>            
		        <Switch
		            android:id="@+id/switch4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			 	    android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:textOff="OFF"
		            android:textOn="ON" />
		    </RelativeLayout>
		 	
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/button5" 
					android:id="@+id/btn_5"/>
		
		        <Switch
		            android:id="@+id/switch5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			 	    android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:textOff="OFF"
		            android:textOn="ON" />
		    </RelativeLayout>
	    </LinearLayout>
    </ScrollView>
	    

</LinearLayout>
